--- a/rpc/sys/etc/sys.yaml
+++ b/rpc/sys/etc/sys.yaml
@@ -9,7 +9,7 @@ Mysql:
   Datasource: root:12345678@tcp(127.0.0.1:3306)/gozero?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
 
 JWT:
-  AccessSecret: ad879037-c7a4-4063-9236-6bfc35d54b7d
+  AccessSecret: ad879037-8723-4063-34kf-6bfc35d54b7d
   AccessExpire: 86400
 
 Log:
